modif sur le css chat-box

--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -1,22 +1,24 @@
 <!-- app/views/parties/show.html.erb -->
-<div class="container-fluid">
-  <div class="party_full_page">
-    <!-- Main Content -->
-    <div class="col-md-8">
-      <h1><%= @party.name %></h1>
-      <p>Univers: <%= @party.universe.name %></p>
-      <p>Maître de jeu: <%= @party.user.pseudo %></p>
+<div class="party_full_page">
+  <!-- Main Content -->
+  <div class="party-page">
+    <h1><%= @party.name %></h1>
+    <p>Univers: <%= @party.universe.name %></p>
+    <p>Maître de jeu: <%= @party.user.pseudo %></p>
 
-      <h2>Personnages actifs dans cette partie</h2>
-      <ul>
-        <% @party.characters.where(available_status: 'Active').each do |character| %>
-          <li><%= link_to character.name, character_path(character) %></li>
-        <% end %>
-      </ul>
-    </div>
+    <h2>Personnages actifs dans cette partie</h2>
+    <ul>
+      <% @party.characters.where(available_status: 'Active').each do |character| %>
+        <li><%= link_to character.name, character_path(character) %></li>
+      <% end %>
+    </ul>
+  </div>
 
-    <!-- Chatbox -->
-    <div class="col-md-4 chatbox-container" data-controller="chatroom-subscription" data-chatroom-subscription-party-id-value="<%= @party.id %>">
+  <!-- Chatbox -->
+
+  <div class="col-md-4 chatbox-container" data-controller="chatroom-subscription" data-chatroom-subscription-party-id-value="<%= @party.id %>">
+    <div class="d-flex">
+      <%= image_tag("border-bois.jpg",class="border-chat", alt: 'bordure bois') %>
       <div class="chatbox">
         <h2>Chat</h2>
         <div class="messages" data-chatroom-subscription-target="messages">
