--- a/app/assets/stylesheets/parties/_show.scss
+++ b/app/assets/stylesheets/parties/_show.scss
@@ -1,7 +1,18 @@
 .party_full_page {
-  display: flex;
-  flex-wrap: nowrap;
 
+  .party-page {
+    flex-grow: 1;
+    background-image: url("background-party.jpg"), url("linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5))");
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+
+    color: #f8f9fa;
+  }
+
+  .border-chat{
+    height: 100vh;
+  }
   .chatbox-container {
       right: 0;
       top: 0;
@@ -13,12 +24,13 @@
       flex-direction: column;
       position: fixed;
 
-
     .chatbox {
+      max-height: 100vh;
       flex-grow: 1;
       display: flex;
       flex-direction: column;
       padding: 5px;
+      background-color: burlywood;
     }
 
     .chatbox .messages {
@@ -35,6 +47,24 @@
       display: flex;
       flex-direction: row;
       align-items: stretch;
+    }
+    ::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 1px;
+      height: 100%;
+      background-image: url("border-bois-top.png");
+    }
+    ::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 1px;
+      height: 100%;
+      background-image: url("border-bois-bot.png");
     }
   }
 }
