--- a/app/assets/stylesheets/parties/_show.scss
+++ b/app/assets/stylesheets/parties/_show.scss
@@ -2,7 +2,7 @@
 
   .party-page {
     flex-grow: 1;
-    background-image: url("background-party.jpg"), url("linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5))");
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("background-party.jpg");
     background-size: cover;
     background-position: center;
     height: 100vh;
