--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -28,9 +28,11 @@
           <% end %>
         </div>
         <%= simple_form_for [@party, @party.messages.build],
-          html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" } } do |f| %>
-          <%= f.input :content, label: false, placeholder: "Message", wrapper_html: { class: "flex-grow-1" } %>
-          <%= f.submit "Envoyer", class: "btn btn-primary" %>
+          html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "message-form" } do |f| %>
+          <div class="input-group">
+            <%= f.input :content, label: false, placeholder: "Partager votre message", input_html: { class: "form-control" } %>
+            <%= f.button :submit, "Envoyer", class: "button-donjons-et-dragons" %>
+          </div>
         <% end %>
       </div>
       <%= image_tag("border-bois-right.png", class: "border-chat", alt: 'bordure bois') %>
