--- a/app/assets/stylesheets/parties/_show.scss
+++ b/app/assets/stylesheets/parties/_show.scss
@@ -1,4 +1,9 @@
+/* Fixed background image for the page */
 .party_full_page {
+  background-image: url('fond-show-character.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 
   .party-page {
     flex-grow: 1;
@@ -6,23 +11,23 @@
     background-size: cover;
     background-position: center;
     height: 100vh;
-
     color: #f8f9fa;
   }
 
-  .border-chat{
+  .border-chat {
     height: 100vh;
   }
+
   .chatbox-container {
-      right: 0;
-      top: 0;
-      height: 100vh;
-      width: 300px;
-      background: #f8f9fa;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      position: fixed;
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 300px;
+    background: #f8f9fa;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 
     .chatbox {
       max-height: 100vh;
@@ -37,23 +42,24 @@
         display: inline-grid;
         align-items: stretch;
       }
+
+      .messages {
+        flex-grow: 1;
+        overflow-y: auto;
+        margin-bottom: 10px;
+      }
+
+      .message {
+        margin-bottom: 10px;
+      }
+
+      form {
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+      }
     }
 
-    .chatbox .messages {
-      flex-grow: 1;
-      overflow-y: auto;
-      margin-bottom: 10px;
-    }
-
-    .chatbox .message {
-      margin-bottom: 10px;
-    }
-
-    .chatbox form {
-      display: flex;
-      flex-direction: row;
-      align-items: stretch;
-    }
     ::before {
       content: '';
       position: absolute;
@@ -63,6 +69,7 @@
       height: 100%;
       background-image: url("border-bois-top.png");
     }
+
     ::after {
       content: '';
       position: absolute;
