--- a/app/assets/stylesheets/parties/_show.scss
+++ b/app/assets/stylesheets/parties/_show.scss
@@ -10,8 +10,9 @@
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("background-party.jpg");
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    min-height: 100vh; /* Changed from height to min-height */
     color: #f8f9fa;
+    padding-right: 320px; /* Add padding to account for the chatbox width + margin */
   }
 
   .border-chat {
