creation d'un fichier backstroy

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -50,7 +50,7 @@
 
 <!-- Backstory section -->
 <div class="show-character-backstory">
-    <h2>Backstory</h2>
+    <h2>L'histoire de <%= @character.name %></h2>
     <p><%= @character.backstory.html_safe %></p>
 </div>
 
