--- a/app/assets/stylesheets/universes/_show.scss
+++ b/app/assets/stylesheets/universes/_show.scss
@@ -3,6 +3,8 @@
     margin: 0 auto;
     padding: 20px;
     text-align: center;
+    position: relative; /* Pour s'assurer que les ::after sont positionnés correctement */
+
 
     h1 {
       font-size: 36px;
@@ -60,8 +62,6 @@
         margin: 10px;
         transition-duration: 0.5s;
         box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
-        -webkit-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
-        -moz-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
         border-radius: 5px;
       }
 
@@ -86,8 +86,6 @@
         margin: 10px;
         transition-duration: 0.5s;
         box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
-        -webkit-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
-        -moz-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
         border-radius: 5px;
       }
 
@@ -112,8 +110,6 @@
         margin: 10px;
         transition-duration: 0.5s;
         box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
-        -webkit-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
-        -moz-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
         border-radius: 5px;
       }
 
