déplacer le H1 après le if

--- a/app/assets/stylesheets/universes/_show.scss
+++ b/app/assets/stylesheets/universes/_show.scss
@@ -1,9 +1,8 @@
 .universe-show {
-    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
-    position: relative; /* Pour s'assurer que les ::after sont positionnés correctement */
+    position: sticky; /* Pour s'assurer que les ::after sont positionnés correctement */
 
 
     h1 {
