--- a/app/assets/stylesheets/universes/_show.scss
+++ b/app/assets/stylesheets/universes/_show.scss
@@ -13,7 +13,9 @@
       }
 
     .tutorial {
-      margin: 30px;
+      margin: 30px auto;
+      max-width: 800px;
+
 
       h2 {
         font-size: 28px;
