--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -1,4 +1,6 @@
+<%# l'image de background est définie dans le fichier SCSS _backgrounds-by-universe.scss %>
 <div class="universe-show <%= @universe.name.parameterize %>">
+
   <%# le titre H1 est après le if @tutorial %>
   <% if @tutorial %>
     <div class="tutorial">
