--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -6,7 +6,7 @@
       <% if message.created_at.to_date == Date.current %>
         <%= message.created_at.strftime("%H:%M") %>
       <% else %>
-        <%= "J-#{(Date.current - message.created_at.to_date).to_i}" %>
+        <%= "J+#{(Date.current - message.created_at.to_date).to_i}" %>
         <%= message.created_at.strftime("%H:%M") %>
       <% end %>
     </i>
