--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -117,7 +117,7 @@
         </div>
       <div class="aleatoire">
         <h5>ou bien laisse l'aleatoire choisir...</h5>
-        <button class="button-destin" onclick="toggle_text('span1', 'span2', 'span3', 'span4', 'span5', 'span6')">Ta Destinée !</button>
+        <button class="button-destin" data-action="click->character#random">Ta Destinée !</button>
       </div>
     </div>
     <% when 9 %>
