modiff  background  by  universe  and  party  show

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,13 @@
-
+// CSS TOUT LE SITE
 .pages-content{
   background-color: #000000d5;
   width: 100vw;
+  background-attachment: fixed;
 }
+
+
+
+// CSS HOME PAGE
 .hero-banner {
   width: 100%;
   background-size: cover;
