--- a/app/assets/stylesheets/parties/_show.scss
+++ b/app/assets/stylesheets/parties/_show.scss
@@ -1,18 +1,14 @@
 /* Fixed background image for the page */
 .party_full_page {
-  background-image: url('fond-show-character.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  display: flex;
 
   .party-page {
     flex-grow: 1;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("background-party.jpg");
     background-size: cover;
     background-position: center;
-    min-height: 100vh; /* Changed from height to min-height */
     color: #f8f9fa;
-    padding-right: 320px; /* Add padding to account for the chatbox width + margin */
+    background-attachment: fixed;
   }
 
   .border-chat {
@@ -20,7 +16,6 @@
   }
 
   .chatbox-container {
-    position: fixed;
     right: 0;
     top: 0;
     height: 100vh;
