--- a/app/assets/stylesheets/universes/_background-by-universe.scss
+++ b/app/assets/stylesheets/universes/_background-by-universe.scss
@@ -5,12 +5,12 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 0.5;
+  opacity: 0.6;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  position: absolute;
+  position: fixed;
   z-index: -1;
 }
 
