MAJ du stimulus

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,18 +2,18 @@
   Lexique du JDR
 <% end %>
 
-<div class="lexique-container">
+<div class="lexique-container" data-controller="lexique">
   <div class="sections">
     <h2>Lexique</h2>
     <ul>
       <% @posts.each do |post| %>
         <li>
-          <%= link_to post.title, post_path(post) %>
+          <%= link_to post.title, post_path(post, format: :json), data: { action: "lexique#load" } %>
         </li>
       <% end %>
     </ul>
   </div>
-  <div class="lexique-content">
+  <div class="lexique-content" data-lexique-target="content">
     <h2>Sélectionnez un mot du lexique pour voir les explications</h2>
   </div>
 </div>
