creation des seeds races et classes dans les modals

--- a/app/assets/stylesheets/characters/_edit.scss
+++ b/app/assets/stylesheets/characters/_edit.scss
@@ -123,6 +123,10 @@
       }
     }
 
+    .modal-body {
+        color: #000000;
+    }
+
     .sliders-container {
       display: flex;
       justify-content: space-around;
