--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,15 @@
 <div class="lexique-container" data-controller="lexique">
   <div class="sections">
+    <div class="search-bar">
+      <%= form_with url: posts_path, method: :get, html: { class: 'mb-5', data: { lexique_target: 'form' } } do %>
+        <%= text_field_tag :query, params[:query], class: 'form-control', placeholder: 'Rechercher un mot...', data: { lexique_target: 'searchInput', action: 'keyup->lexique#update' } %>
+      <% end %>
+    </div>
     <h2>Lexique</h2>
-    <ul>
+    <ul data-lexique-target="list">
       <% @posts.each do |post| %>
         <li>
-          <%= link_to post.title, post_path(post, format: :json), data: { action: "lexique#load" }, class: "lexique-button" %>
+          <%= link_to post.title, post_path(post, format: :json), data: { action: "lexique#load" } %>
         </li>
       <% end %>
     </ul>
