add search bar to css

--- a/app/assets/stylesheets/tutorials/_home.scss
+++ b/app/assets/stylesheets/tutorials/_home.scss
@@ -11,6 +11,10 @@
   overflow-y: auto; /* Permet le défilement vertical à l'intérieur de cette div */
 }
 
+.search-bar {
+  margin-bottom: 20px;
+}
+
 .sections h2 {
   text-align: center;
 }
