--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<!-- app/views/posts/index.html.erb -->
 <div class="lexique-container" data-controller="lexique">
   <div class="sections">
     <div class="search-bar">
