--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,14 +6,16 @@
         <%= text_field_tag :query, params[:query], class: 'form-control', placeholder: 'Rechercher un mot...', data: { lexique_target: 'searchInput', action: 'keyup->lexique#update' } %>
       <% end %>
     </div>
-    <h2>Lexique</h2>
-    <ul data-lexique-target="list">
-      <% @posts.each do |post| %>
-        <li>
-          <%= link_to post.title, post_path(post, format: :json), data: { action: "lexique#load" } %>
-        </li>
-      <% end %>
-    </ul>
+    <div class="lexique-dictionnary"> 
+      <h2>Lexique</h2>
+      <ul data-lexique-target="list">
+        <% @posts.each do |post| %>
+          <li>
+            <%= link_to post.title, post_path(post, format: :json), data: { action: "lexique#load" } %>
+          </li>
+        <% end %>
+      </ul>
+    </div>  
   </div>
   <div class="lexique-content" data-lexique-target="content">
     <h2>Sélectionnez un mot du lexique pour voir les explications</h2>
