--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -1,8 +1,11 @@
 <!-- app/views/posts/_list.html.erb -->
-<ul>
-  <% posts.each do |post| %>
-    <li>
-      <%= link_to post.title, post_path(post, format: :json), data: { action: "lexique#load" } %>
-    </li>
-  <% end %>
-</ul>
+<div data-lexique-target="dictionary">
+  <h2>Lexique</h2>
+  <ul data-lexique-target="list">
+    <% posts.each do |post| %>
+      <li>
+        <%= link_to post.title, post_path(post, format: :json), data: { action: "lexique#load" } %>
+      </li>
+    <% end %>
+  </ul>
+</div>
