--- a/app/assets/stylesheets/parties/_show.scss
+++ b/app/assets/stylesheets/parties/_show.scss
@@ -21,9 +21,10 @@
     height: 100vh;
     width: 300px;
     background: #f8f9fa;
-    overflow-y: auto;
     display: flex;
     flex-direction: column;
+    position: sticky;
+    top: 0;
 
     .chatbox {
       max-height: 100vh;
@@ -56,7 +57,7 @@
       }
     }
 
-    ::before {
+    &::before {
       content: '';
       position: absolute;
       top: 0;
@@ -66,7 +67,7 @@
       background-image: url("border-bois-top.png");
     }
 
-    ::after {
+    &::after {
       content: '';
       position: absolute;
       top: 0;
