--- a/app/assets/stylesheets/universes/_home.scss
+++ b/app/assets/stylesheets/universes/_home.scss
@@ -1,73 +1,82 @@
+.portal{
+  background-image: url("portail-empty-center.png");
+  top: 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  background-position: center;
+  z-index: 2;
+}
 .container_universes {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  margin-left: -23px;
+  padding-top: 40px;
 
-#carousel-universes{
-  width: min-content;
-}
+  #carousel-universes{
+    width: 80vh;
+  }
+ .carousel-control-next, .carousel-control-prev{
+  z-index: 4;
+ }
 
   .universe {
-    width: 600px;
-    height: 400px;
-    background-size: auto;
+    height: 80vh;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
     cursor: pointer;
     text-align: center;
     z-index: 0;
+    justify-content: center;
+
+    .opacity-universes-cards{
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.7);
+      position: absolute;
+      z-index: 1;
+    }
+
   }
+
   .text {
-    margin-top: 21%;
+    padding-top: 33%;
     transition: 0.5s ease;
-    opacity: 1;
     text-align: center;
     color: white;
-    font-size: 30px;
-    font-weight: bold;
     text-shadow: 2px 2px 4px #000000;
-  }
-  .description {
-    transition: 0.5s ease;
-    opacity: 0;
-    top: 50%;
-    left: 50%;
-    text-align: center;
-    color: white;
-  }
+    z-index: 3!important;
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 
-  .universe:hover {
-    transform: scale(1.05);
-
-    .background-opacity{
-    position:absolute;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    background-color: #00000071;
-    z-index: -1; }
-
-    .description  {
-      margin-top: 50px;
-      padding-left: 10px;
-      padding-right: 10px;
-      border-radius: 10px;
-      text-align: center;
+    h2{
+      font-size: 30px;
+      margin-bottom: 50px;
+      font-weight: bold;
       opacity: 1;
-
     }
 
-    .text {
-      opacity: 0;
+    p{
+      opacity: 1;
+      padding-left: 25%;
+      padding-right: 25%;
+      font-size: 20px;
+      margin-bottom: 15px;
+      font-weight: semi-bold;
     }
+
+
   }
   // .titre {
   //   color: white;
