changé les background images pour les universes

--- a/app/assets/stylesheets/universes/_background-by-universe.scss
+++ b/app/assets/stylesheets/universes/_background-by-universe.scss
@@ -15,7 +15,7 @@
 }
 
 .donjons-et-dragons::after {
-  background-image: url('dnd.jpg');
+  background-image: url('background-dnd.jpg');
 }
 
 .call-of-cthulhu::after {
@@ -23,5 +23,5 @@
 }
 
 .runequest::after {
-  background-image: url('runequest.jpg');
+  background-image: url('background-runequest.jpg');
 }
