edit de l'image de cthulhu

--- a/app/assets/stylesheets/universes/_background-by-universe.scss
+++ b/app/assets/stylesheets/universes/_background-by-universe.scss
@@ -19,7 +19,7 @@
 }
 
 .call-of-cthulhu::after {
-  background-image: url('chtullu.jpg');
+  background-image: url('background-cthulhu.jpg');
 }
 
 .runequest::after {
