--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
   <div class="sections">
     <div class="search-bar">
       <%= form_with url: posts_path, method: :get, html: { class: 'mb-5', data: { lexique_target: 'form' } } do %>
-        <%= text_field_tag :query, params[:query], class: 'form-control', placeholder: 'Rechercher un mot...', data: { lexique_target: 'searchInput', action: 'keyup->lexique#update' } %>
+        <%= text_field_tag :query, params[:query], class: 'form-control', placeholder: 'En savoir plus sur les mots', data: { lexique_target: 'searchInput', action: 'keyup->lexique#update' } %>
       <% end %>
     </div>
     <div class="lexique-dictionnary" data-lexique-target="dictionary">
