--- a/app/assets/stylesheets/tutorials/_home.scss
+++ b/app/assets/stylesheets/tutorials/_home.scss
@@ -19,6 +19,11 @@
   z-index: 1; /* S'assure que la barre de recherche reste au-dessus du reste du contenu */
 }
 
+.search-bar.sticky {
+  background-color: white;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Optionnel: ajouter une ombre pour plus de visibilité */
+}
+
 .sections h2 {
   text-align: center;
 }
