--- a/app/assets/stylesheets/tutorials/_home.scss
+++ b/app/assets/stylesheets/tutorials/_home.scss
@@ -17,13 +17,15 @@
   top: 0;
   padding: 10px;
   z-index: 1; /* S'assure que la barre de recherche reste au-dessus du reste du contenu */
-  transition: background-color 0.3s ease, box-shadow 0.3s ease, padding 0.3s ease; /* Ajouter des transitions pour un changement en douceur */
+  transition: background-color 0.5s ease-in-out, box-shadow 0.5s ease-in-out, padding 0.5s ease-in-out; /* Durée de transition augmentée et effet plus fluide */
 }
 
 .search-bar.sticky {
   background-color: white;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Ajouter une ombre pour plus de visibilité */
-  padding: 20px 5px;
+  padding: 20px 10px; /* Padding ajusté pour une transition plus fluide */
+  border-radius: 10px;
+
 }
 
 .sections h2 {
